[JSC] Fix Array allocation in Object.keys https://bugs.webkit.org/show_bug.cgi?id=176826

Reviewed by Saam Barati.

JSTests:

* stress/object-own-property-keys.js: Added.
(shouldBe):

Source/JavaScriptCore:

When isHavingABadTime() is true, array allocation does not become ArrayWithContiguous.
We check isHavingABadTime() in ownPropertyKeys fast path.
And we also ensures that ownPropertyKeys uses putDirect operation instead of put by a test.

* runtime/ObjectConstructor.cpp:
(JSC::ownPropertyKeys):


Canonical link: https://commits.webkit.org/193305@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221970 268f45cc-cd09-0410-ab3c-d52691b4dbfc